@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12664.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12693.tgz',
      'xapian-core.tgz',
-     'ab2e18789a861ff78afb9d63aee4bb4eb45460c8',
+     '5ec73c6f41c58326b1bf98667497e3b52a020b5d',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12664.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12693.tgz',
      'xapian-bindings.tgz',
-     'b721a03b4a010064a097f92a936a745f8fd64a44',
+     'e6fbe6ee885d5d0e2adcc84ac9a97842f1a143a3',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12664.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12693.tgz',
      'win32msvc.tgz',
-     '624b0e7de67532f4da31de4ae46f0f429b6844a8',
+     'b53924609062d0b3c9535c9288af6dce53647075',
      'xapian-core/win32',
     ),
     ('Xapian extras',
