@@ -1,3 +1,8 @@
+Mon May 11 10:49:56 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py,utils/make_xappy_tarballs: New branchpoint and
+	  new tarballs.
+
 Fri May 08 08:37:09 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: New xapian tarballs.
